# phaethon

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  BUILDDEP  BUILDDEP.md  CMakeLists.txt  COPYING.GPLv2  ChangeLog  Doxyfile  Makefile.am  Makefile.common  NEWS.md  README.dox  README.md  autogen.sh  configure.ac  rules.mk
.github/workflows/: linux_autoconf_clang.yml  linux_autoconf_gcc.yml  linux_autotools_clang.yml  linux_autotools_gcc.yml  linux_cmake_clang.yml  linux_cmake_gcc.yml  macos_autoconf_clang.yml  macos_autotools_clang.yml  macos_cmake_clang.yml  vcpkg.json  windows_cmake_msvc.yml
cmake/: CMakeAM.cmake  CMakeUninstall.cmake  FindFaad.cmake  FindIconv.cmake  FindLibLZMA.cmake  FindMad.cmake  FindOgg.cmake  FindVorbis.cmake  SetCheckCompilerFlag.cmake
cmake/toolchain/: i686-windows-mingw.cmake  x86_64-windows-mingw.cmake
dists/: rules.mk
dists/arch/: PKGBUILD
dists/debian/: changelog  control  copyright  rules
dists/fedora/: build-from-git.sh  phaethon.spec
dists/win32/: phaethon.rc
doc/: rules.mk
m4/: README  ax_check_al.m4  ax_check_qt5.m4  ax_check_wx.m4
man/: phaethon.1  rules.mk
src/: Makefile.am  about.cpp  about.h  cline.cpp  cline.h  eventid.h  mainwindow.cpp  mainwindow.h  panelpreviewsound.cpp  panelpreviewsound.h  phaethon.cpp  resourcetree.cpp  resourcetree.h  rules.mk  soundcontrols.cpp  soundcontrols.h
src/aurora/: 2dafile.cpp  2dafile.h  Makefile.am  archive.cpp  archive.h  aurorafile.cpp  aurorafile.h  biffile.cpp  biffile.h  bzffile.cpp  bzffile.h  erffile.cpp  erffile.h  gdafile.cpp  gdafile.h  gdaheaders.cpp  gdaheaders.h  gff4fields.h  gff4file.cpp  gff4file.h  herffile.cpp  herffile.h  keydatafile.cpp  keydatafile.h  keyfile.cpp  keyfile.h  language.cpp  language.h  language_strings.h  locstring.cpp  locstring.h  ndsrom.cpp  ndsrom.h  rimfile.cpp  rimfile.h  rules.mk  types.h  util.cpp  util.h  zipfile.cpp  (+1 more)
src/common/: Makefile.am  atomic.h  binsearch.h  bitstream.h  blowfish.cpp  blowfish.h  cosinetables.cpp  cosinetables.h  deallocator.h  deflate.cpp  deflate.h  disposableptr.h  encoding.cpp  encoding.h  endianness.h  error.cpp  error.h  fallthrough.h  fft.cpp  fft.h  file.cpp  file.h  filelist.cpp  filelist.h  filepath.cpp  filepath.h  filetree.cpp  filetree.h  hash.h  huffman.cpp  huffman.h  lzma.cpp  lzma.h  maths.cpp  maths.h  md5.cpp  md5.h  mdct.cpp  mdct.h  memreadstream.cpp  (+43 more)
src/gui/: Makefile.am  about.cpp  about.h  config.cpp  config.h  eventid.h  icons.cpp  icons.h  mainwindow.cpp  mainwindow.h  panel.h  panelbase.cpp  panelbase.h  panelmanager.cpp  panelmanager.h  panelpreviewempty.cpp  panelpreviewempty.h  panelpreviewimage.cpp  panelpreviewimage.h  panelpreviewsound.cpp  panelpreviewsound.h  panelpreviewtable.cpp  panelpreviewtable.h  panelpreviewtext.cpp  panelpreviewtext.h  panelresourceinfo.cpp  panelresourceinfo.h  proxymodel.cpp  proxymodel.h  resourcetree.cpp  resourcetree.h  resourcetreeitem.cpp  resourcetreeitem.h  rules.mk  selection.cpp  selection.h  statusbar.cpp  statusbar.h
src/images/: Makefile.am  dds.cpp  dds.h  decoder.cpp  decoder.h  dumptga.cpp  dumptga.h  rules.mk  s3tc.cpp  s3tc.h  sbm.cpp  sbm.h  tga.cpp  tga.h  tpc.cpp  tpc.h  txb.cpp  txb.h  types.h  util.h  winiconimage.cpp  winiconimage.h
src/sound/: Makefile.am  audiostream.cpp  audiostream.h  rules.mk  sound.cpp  sound.h  types.h
src/sound/decoders/: Makefile.am  adpcm.cpp  adpcm.h  asf.cpp  asf.h  codec.cpp  codec.h  mp3.cpp  mp3.h  pcm.cpp  pcm.h  rules.mk  util.h  vorbis.cpp  vorbis.h  wave.cpp  wave.h  wave_types.h  wma.cpp  wma.h  wmadata.h
src/version/: Makefile.am  rules.mk  version.cpp  version.h
tests/: rules.mk  skip.h
tests/aurora/: biffile.cpp  bzffile.cpp  erffile.cpp  keyfile.cpp  language.cpp  locstring.cpp  rimfile.cpp  rules.mk  util.cpp  zipfile.cpp
tests/common/: bitstream.cpp  blowfish.cpp  deflate.cpp  disposableptr.cpp  encoding.h  encoding_ascii.cpp  encoding_cp1250.cpp  encoding_cp1251.cpp  encoding_cp1252.cpp  encoding_cp932.cpp  encoding_cp936.cpp  encoding_cp949.cpp  encoding_cp950.cpp  encoding_latin9.cpp  encoding_tests.h  encoding_utf16be.cpp  encoding_utf16le.cpp  encoding_utf8.cpp  filelist.cpp  filepath.cpp  hash.cpp  huffman.cpp  lzma.cpp  maths.cpp  md5.cpp  memreadstream.cpp  memwritestream.cpp  ptrlist.cpp  ptrmap.cpp  ptrvector.cpp  readfile.cpp  rules.mk  scopedptr.cpp  strutil.cpp  ustring.cpp  util.cpp  writefile.cpp  zipfile.cpp
tests/googletest/: rules.mk
tests/images/: rules.mk  util.cpp
tests/version/: rules.mk  version.cpp
ui/: mainwindow.ui  previewempty.ui  previewimage.ui  previewsound.ui  previewtext.ui  resourceinfo.ui  resourceinfopanel.ui
utf8cpp/: rules.mk
verdigris/: README.Phaethon  rules.mk
