include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 locstring.h \
                 aurorafile.h \
                 archive.h \
                 zipfile.h \
                 $(EMPTY)

libaurora_la_SOURCES = \
                       util.cpp \
                       locstring.cpp \
                       aurorafile.cpp \
                       archive.cpp \
                       zipfile.cpp \
                       $(EMPTY)

libaurora_la_LIBADD = \
                      $(EMPTY)
