include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 locstring.h \
                 aurorafile.h \
                 archive.h \
                 zipfile.h \
                 erffile.h \
                 rimfile.h \
                 keyfile.h \
                 biffile.h \
                 bzffile.h \
                 $(EMPTY)

libaurora_la_SOURCES = \
                       util.cpp \
                       locstring.cpp \
                       aurorafile.cpp \
                       archive.cpp \
                       zipfile.cpp \
                       erffile.cpp \
                       rimfile.cpp \
                       keyfile.cpp \
                       biffile.cpp \
                       bzffile.cpp \
                       $(EMPTY)

libaurora_la_LIBADD = \
                      $(EMPTY)
