include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libaurora.la

noinst_HEADERS = \
                 types.h \
                 util.h \
                 language.h \
                 language_strings.h \
                 locstring.h \
                 aurorafile.h \
                 archive.h \
                 zipfile.h \
                 erffile.h \
                 rimfile.h \
                 keyfile.h \
                 keydatafile.h \
                 biffile.h \
                 bzffile.h \
                 $(EMPTY)

libaurora_la_SOURCES = \
                       util.cpp \
                       language.cpp \
                       locstring.cpp \
                       aurorafile.cpp \
                       archive.cpp \
                       zipfile.cpp \
                       erffile.cpp \
                       rimfile.cpp \
                       keyfile.cpp \
                       keydatafile.cpp \
                       biffile.cpp \
                       bzffile.cpp \
                       $(EMPTY)

libaurora_la_LIBADD = \
                      $(EMPTY)
