include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libcommon.la

noinst_HEADERS = \
                 endianness.h \
                 system.h \
                 types.h \
                 util.h \
                 noncopyable.h \
                 singleton.h \
                 error.h \
                 ustring.h \
                 stream.h \
                 $(EMPTY)

libcommon_la_SOURCES = \
                       util.cpp \
                       error.cpp \
                       ustring.cpp \
                       stream.cpp \
                       $(EMPTY)

libcommon_la_LIBADD = \
                      $(EMPTY)
