include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libgui.la

noinst_HEADERS = \
                 eventid.h \
                 mainwindow.h \
                 about.h \
                 resourcetree.h \
                 panelpreviewsound.h \
                 $(EMPTY)

libgui_la_SOURCES = \
                    mainwindow.cpp \
                    about.cpp \
                    resourcetree.cpp \
                    panelpreviewsound.cpp \
                    $(EMPTY)

libgui_la_LIBADD = \
                   $(EMPTY)
