include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libimages.la

noinst_HEADERS = \
                 types.h \
                 s3tc.h \
                 $(EMPTY)

libimages_la_SOURCES = \
                       s3tc.cpp \
                       $(EMPTY)

libimages_la_LIBADD = \
                      $(EMPTY)
