include $(top_srcdir)/Makefile.common

SUBDIRS = \
          $(EMPTY)

noinst_LTLIBRARIES = libimages.la

noinst_HEADERS = \
                 types.h \
                 s3tc.h \
                 decoder.h \
                 dumptga.h \
                 winiconimage.h \
                 $(EMPTY)

libimages_la_SOURCES = \
                       s3tc.cpp \
                       decoder.cpp \
                       dumptga.cpp \
                       winiconimage.cpp \
                       $(EMPTY)

libimages_la_LIBADD = \
                      $(EMPTY)
