include $(top_srcdir)/Makefile.common

SUBDIRS = \
          decoders \
          $(EMPTY)

noinst_LTLIBRARIES = libsound.la

noinst_HEADERS = \
                 audiostream.h \
                 $(EMPTY)

libsound_la_SOURCES = \
                      $(EMPTY)

libsound_la_LIBADD = \
                     decoders/libdecoders.la \
                     $(EMPTY)
